--- a/blocks/leadspace/leadspace.css
+++ b/blocks/leadspace/leadspace.css
@@ -158,7 +158,7 @@ main div.leadspace-wrapper {
 
 /* stylelint-disable-next-line no-descending-specificity */
 .leadspace.quarter-circle:not(.no-clip) picture {
-    clip-path: circle(100% at 100% 95%);
+    clip-path: circle(100% at 100% 100%);
     }
 
 .leadspace.video > div:first-child > div:nth-child(2) {
